# VtkMeshFrame

./: .gitignore  CMakeLists.txt  LICENSE  generate_vs.ps1
src/: CMakeLists.txt  common.h  main.cxx  mesh_shell.cxx  mesh_shell.h
src/mesh/: meshDefs.h  mesh_wrapper.cxx  mesh_wrapper.h
src/ui/: mainwindow.cxx  mainwindow.h  mainwindow.ui  meshwidget.cxx  meshwidget.h  meshwidget.ui
src/view_tools/: actor_controler.cxx  actor_controler.h  view_defs.h  view_manager.cxx  view_manager.h  vtk_heads.h  vtk_wrapper.cxx  vtk_wrapper.h  vtk_wrapper_impl.hpp
